syntax = "proto3";
package greet;

message Greeting {
	string firstName = 1;
	string lastName = 2;
}
message GreetingRequest{
	Greeting greeting = 1;
}
message GreetingResponse{
	string result = 1;
}
message GreetingManyRequest{
	Greeting greeting = 1;
}
message GreetingManyResponse{
	string result = 1;
}

message GreetingEveryoneRequest{
	Greeting greeting = 1;
}
message GreetingEveryoneResponse{
	string result = 1;
}
service GreetingService{
	rpc GreetManyTimes (GreetingManyRequest) returns (stream GreetingManyResponse) {}
	rpc Greet (GreetingRequest) returns (GreetingResponse){}
	rpc GreetEveryone (stream GreetingEveryoneRequest) returns (stream GreetingEveryoneResponse){}
}